// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFocusStyle() should return correct css for opts: { inset: '-4px -2px', borderRadius: '6px', theme: 'dark' } 1`] = `
{
  "&:focus::after": {
    "border": "2px solid #1E5BEB",
    "borderRadius": "6px",
    "content": """",
    "inset": "-4px -2px",
    "pointerEvents": "none",
    "position": "absolute",
  },
  "&:focus:not(:focus-visible)::after": {
    "borderColor": "transparent",
  },
  "outline": 0,
  "position": "relative",
}
`;

exports[`getFocusStyle() should return correct css for opts: { inset: '-4px -2px', borderRadius: '6px', theme: 'light' } 1`] = `
{
  "&:focus::after": {
    "border": "2px solid #0A0AFF",
    "borderRadius": "6px",
    "content": """",
    "inset": "-4px -2px",
    "pointerEvents": "none",
    "position": "absolute",
  },
  "&:focus:not(:focus-visible)::after": {
    "borderColor": "transparent",
  },
  "outline": 0,
  "position": "relative",
}
`;

exports[`getFocusStyle() should return correct css for opts: { inset: 'medium', borderRadius: 'medium', theme: 'dark' } 1`] = `
{
  "&:focus::after": {
    "border": "2px solid #1E5BEB",
    "borderRadius": "8px",
    "content": """",
    "inset": "-6px",
    "pointerEvents": "none",
    "position": "absolute",
  },
  "&:focus:not(:focus-visible)::after": {
    "borderColor": "transparent",
  },
  "outline": 0,
  "position": "relative",
}
`;

exports[`getFocusStyle() should return correct css for opts: { inset: 'medium', borderRadius: 'medium', theme: 'light' } 1`] = `
{
  "&:focus::after": {
    "border": "2px solid #0A0AFF",
    "borderRadius": "8px",
    "content": """",
    "inset": "-6px",
    "pointerEvents": "none",
    "position": "absolute",
  },
  "&:focus:not(:focus-visible)::after": {
    "borderColor": "transparent",
  },
  "outline": 0,
  "position": "relative",
}
`;

exports[`getFocusStyle() should return correct css for opts: { inset: 'small', borderRadius: 'small', theme: 'dark' } 1`] = `
{
  "&:focus::after": {
    "border": "2px solid #1E5BEB",
    "borderRadius": "4px",
    "content": """",
    "inset": "-4px",
    "pointerEvents": "none",
    "position": "absolute",
  },
  "&:focus:not(:focus-visible)::after": {
    "borderColor": "transparent",
  },
  "outline": 0,
  "position": "relative",
}
`;

exports[`getFocusStyle() should return correct css for opts: { inset: 'small', borderRadius: 'small', theme: 'light' } 1`] = `
{
  "&:focus::after": {
    "border": "2px solid #0A0AFF",
    "borderRadius": "4px",
    "content": """",
    "inset": "-4px",
    "pointerEvents": "none",
    "position": "absolute",
  },
  "&:focus:not(:focus-visible)::after": {
    "borderColor": "transparent",
  },
  "outline": 0,
  "position": "relative",
}
`;

exports[`getFocusStyle() should return correct css for opts: { inset: undefined, borderRadius: undefined, theme: undefined } 1`] = `
{
  "&:focus::after": {
    "border": "2px solid #0A0AFF",
    "borderRadius": "4px",
    "content": """",
    "inset": "-4px",
    "pointerEvents": "none",
    "position": "absolute",
  },
  "&:focus:not(:focus-visible)::after": {
    "borderColor": "transparent",
  },
  "outline": 0,
  "position": "relative",
}
`;
